2000-10-04  Brent Welch <welch@ajubasolutions.com>
    
	* lib/direct.tcl: Exported Direct_MarshallArguments that computes
	the Tcl command to invoke, so other domains can implement variations
	on application-direct URLs.
	* lib/url.tcl: Added Url_QuerySetup that is like the old
	Url_DecodeQuery, but passes the information to the ncgi:: module.

2000-10-02  Brent Welch <welch@ajubasolutions.com>
    
	* lib/counter.tcl: Changed stats:: to counter::
	* lib/status.tcl: Changed stats:: to counter::

2000-10-02  Brent Welch <welch@ajubasolutions.com>
    
	* lib/counter.tcl: Fixed secsPerMinute initialization.
	* lib/status.tcl: Added use of stats::htmlHistDisplayRow
	Added /status/domain for per-domain counting
	* lib/url.tcl: Added per-domain hit counting.
	* imagemap.tcl, ismap.tcl, snmp.tcl, discover.tcl - cleaned up to have a
	packge not span files because that breaks our custom-generated pkgIndex.tcl

2000-09-29  Brent Welch <welch@ajubasolutions.com>
    
	* lib/debug.tcl: Fixed /debug/pvalue to properly sort things
	when given a name pattern.
	* lib/doc.tcl: Added DocGetTemplates to check for .tml files properly
	when using user's public_html directory and Doc_AddRoot.  Based on
	an idea contributed by Glenn Jackmann
	* lib/httpd.tcl: Added Httpd_RequestComplete so the Url module can
	determine if a URL implementation actually issued a response.
	* lib/url.tcl: Url_Dispatch returns a default 403 result if the
	access hook says "denied" but doesn't send a response.
	* htdocs_2: added some test pages to ensure that the DocGetTemplates
	code is working.
	* Makefile.in: Added mkinstalldirs for the man directory.

2000-09-29  Lee Bernhard  <lfb@ajubasolutions.com>

	* lib/direct.tcl: Split DirectDomain into four functions that
	parse the query data, assemble the Tcl command line to execute,
	evaluate the command, and return a result.  

2000-09-27  Brent Welch <welch@ajubasolutions.com>

	* lib/direct.tcl: Converted this to use the ncgi:: module.